Fix overflow and content nav

--- a/css/resourcespage.css
+++ b/css/resourcespage.css
@@ -1,10 +1,11 @@
 /*SIDE NAV*/
 #sidenav {
     width: 20%;
-    height: 80vh;
+    min-height: 1px;
     margin: 5%;
     margin-bottom: 10%;
     margin-right: 0;
+    overflow: hidden;
     float: left;
     position: sticky;
     top: 100px;
@@ -12,8 +13,8 @@
 }
 button.accordion {
     width: 100%;
-    height: 20%;
-    min-height: 55px;
+    height: 15vh;
+    min-height: 75px;
     display: block;
     cursor: pointer;
     outline: none;
